2009-10-20  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/amrmtape.pl: added config override option
	* installcheck/amrmtape.pl: regression test

2009-10-20  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/xfer-dest-taper.c: add detailed debugging
	* perl/Amanda/IPC/LineProtocol.pm: add protocol debugging
	* perl/Amanda/Taper/Scribe.pm: pass debugging flags around
	* server-src/taper.pl: pass debugging flags around

2009-10-20  Dustin J. Mitchell <dustin@zmanda.com>
	* xfer-src/dest-buffer.c: fix Solaris cc compile errors

2009-10-20  Dustin J. Mitchell <dustin@zmanda.com>
	* xfer-src/xfer-element.h xfer-src/Makefile.am xfer-src/dest-buffer.c:
	  new element
	* perl/Amanda/Xfer.pod perl/Amanda/Xfer.swg: SWIG it
	* installcheck/Amanda_Xfer.pl: tests
	* xfer-src/source-pattern.c: fix typo

2009-10-19  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: error handling for logfile reading.
	* perl/Amanda/Logfile.pod: documentation of open_logfile error
	behavior

2009-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Makefile.am (full_tests): Add amadmin.
	* installcheck/amadmin.pl: Check diskname matching argument.

2009-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/match.c: Fix match_word function.

2009-10-16 Dan Locks <dwlocks@zmanda.com>
	*  example/xinetd.amandaclient.in, example/xinetd.amandaserver.in:
	   replace IPv6 with IPv4

2009-10-16  Nikolas Coukouma <atrus@zmanda.com>
	* amar-src/amar.c, amar-src/amar.h, amar-src/amarchiver.c,
	  application-src/amlog-script.pl, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl, application-src/script-email.pl,
	  changer-src/chg-glue.pl, common-src/amaespipe.sh,
	  common-src/amcryptsimple.pl, common-src/amgetconf.pl,
	  common-src/amgpgcrypt.pl, common-src/event-test.c,
	  common-src/glib-util.c, common-src/glib-util.h,