@@ -65,11 +65,14 @@ use strict;
 use warnings;
 use Socket;
 
+use Amanda::Util;
+
 our $TMP = "$AMANDA_TMPDIR/installchecks";
 
 # run this just before the script actually executes
 # (not during syntax checks)
 INIT {
+    Amanda::Util::set_pname($0);
     mkpath($TMP);
 }
 
